// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual snapshot — EmptyState primitive (T-UI-409) > renders EmptyState with CTA + without CTA > with-cta 1`] = `
<div
  class="flex flex-col items-center justify-center gap-ui-space-3 rounded-ui-lg border border-dashed border-ui-border bg-ui-bg-muted px-ui-space-6 py-ui-space-8 text-center"
  role="status"
>
  <h3
    class="text-ui-text-lg font-ui-font-semibold text-ui-fg"
  >
    No accounts yet
  </h3>
  <p
    class="max-w-md text-ui-text-sm text-ui-fg-muted"
  >
    Create your first account to start recording transactions.
  </p>
  <a
    class="text-ui-accent underline-offset-2 hover:underline focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ui-accent focus-visible:ring-offset-2 rounded-ui-sm text-ui-accent hover:underline"
    href="/accounts/new"
  >
    + New account
  </a>
</div>
`;

exports[`visual snapshot — EmptyState primitive (T-UI-409) > renders EmptyState with CTA + without CTA > without-cta 1`] = `
<div
  class="flex flex-col items-center justify-center gap-ui-space-3 rounded-ui-lg border border-dashed border-ui-border bg-ui-bg-muted px-ui-space-6 py-ui-space-8 text-center"
  role="status"
>
  <h3
    class="text-ui-text-lg font-ui-font-semibold text-ui-fg"
  >
    No data
  </h3>
  <p
    class="max-w-md text-ui-text-sm text-ui-fg-muted"
  >
    Nothing to display yet.
  </p>
</div>
`;
